<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="@color/white"
    android:weightSum="6">

    <ImageView
        android:id="@+id/imgBookImage"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_weight="1.5"
        android:src="@mipmap/ic_launcher"
        android:padding="5dp"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_weight="3.3"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_book"
            android:padding="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookName"
            android:text="@string/name_of_the_author"
            android:padding="8dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/txtBookAuthor"
            android:text="@string/rs_299"
            android:padding="8dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#357a38"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtBookRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:padding="4dp"
        android:drawableLeft="@drawable/ic_ratings"
        android:textColor="#ffca28"
        android:text="4.5"
        android:drawablePadding="4dp"
        android:textSize="15sp"
        android:textStyle="bold"/>

    


</LinearLayout>